Tile button: fix label wrap

--- a/src/client/assets/css/components/button.less
+++ b/src/client/assets/css/components/button.less
@@ -169,6 +169,9 @@
 
         > .label {
             flex-direction: column;
+
+            white-space: normal;
+            text-align: center;
         }
     }
 
